fixed alignment issues
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/WDK@7876 4235af6a-31f9-0310-9ad3-ecf6348f2534

--- a/trunk/View/webapp/wdk/css/wdkSite.css
+++ b/trunk/View/webapp/wdk/css/wdkSite.css
@@ -101,7 +101,6 @@ ul#strategy_tabs {
 	position: absolute;
 	left: -999em;
 	width:100%;
-	float:left;
 }
 
 .toggle {display: none;}
@@ -604,7 +603,6 @@ a.redbutton:active span {
 	max-height: 300px;
 	overflow-y: auto;
 	border: 2px solid gray;
-	float:left;
 }
 
 div.Workspace {
